--- a/ritly_app/Gemfile
+++ b/ritly_app/Gemfile
@@ -3,6 +3,8 @@ source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.2'
 
+gem 'pry'
+
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 
@@ -30,6 +32,12 @@ gem 'jbuilder', '~> 1.2'
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
+end
+
+gem 'bootstrap-sass'
+
+group :develeopment do
+  gem 'rails_layout'
 end
 
 # Use ActiveModel has_secure_password
