users and sessions routes added

--- a/ritly_app/Gemfile
+++ b/ritly_app/Gemfile
@@ -41,7 +41,9 @@ group :develeopment do
 end
 
 # Use ActiveModel has_secure_password
-# gem 'bcrypt-ruby', '~> 3.1.2'
+gem 'bcrypt-ruby', '~> 3.1.2'
+
+gem 'annotate'
 
 # Use unicorn as the app server
 # gem 'unicorn'
